# web-product-data

./: .gitignore  EXPERIMENT_LOG.md  README.md  build_lspc_dataset.py  extract_categories.py  pyproject.toml  results_category.txt  train_brand_detector.py  train_qwen3_lora.py  train_qwen3_lora_v2.py  webdata_discovery.py
brand_classification/: prepare_brand_dataset.py
category_classification/: __init__.py  build_lspc_dataset.py  build_lspc_dataset_full.py  embedding_classifier.py  embedding_classifier_v2.py  embedding_classifier_v3.py  infer_embedding_classifier.py  language_detection.py  measure_lora_latency.py  train_embedding_classifier.py  train_embedding_classifier_v2.py  train_embedding_classifier_v3.py  train_qwen3_lora_v2.py
docs/: embedding_classifier_architecture.md
