[project]
name = "semantic-model"
version = "0.1.0"
description = ""
authors = [
    {name = "ivan.aufkl@gmail.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false
name = "semantic-model"
version = "0.1.0"
description = ""
authors = ["ivan.aufkl@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
datasets = "^2.19.0"
transformers = "^4.53.0"
peft = "^0.11.1"
scikit-learn = "^1.5.0"
torch       = { version = "2.9.1+cu121", source = "pytorch-cu130" }
accelerate = "^1.8.1"
bitsandbytes = "^0.45.3" 
tqdm = "^4.66.4"
numpy = "<2.0"
prodigyopt = "^1.0"
setuptools = "*"
importlib-metadata = "^8.7.0"
tokenizers = "^0.21.2"
langdetect = "^1.0.9"
fasttext-wheel = "^0.9.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name     = "pytorch-cu130"
url      = "https://download.pytorch.org/whl/cu130"
priority = "explicit"   
